# scottbrian_algo1

./: .gitignore  MANIFEST.in  README.rst  mypy.ini  notes.txt  pyproject.toml  pytest.ini  setup.py  tox.ini
docs/source/: algo_api_link.rst  conf.py  index.rst
src/ibapi/: client.py  contract.py
src/scottbrian_algo1/: __init__.py  __init__.pyi  algo_api.py  algo_app.py  algo_client.py  algo_data.py  algo_maps.py  algo_wrapper.py  py.typed  sec_data.py
tests/test_scottbrian_algo1/: __init__.py  conftest.py  const.py  test_algo_api.py  test_algo_app.py
