[project]
name = "scottbrian_algo1"
version = "1.0.0"
description = "Analyze and trade financial instruments"
readme = "README.rst"
requires-python = ">=3.11"
license = {file = "LICENSE.txt"}
keywords = ["trade", "invest", "ibapi", "stocks", "options"]
authors = [{name = "Scott Tuttle", email = "sbtuttle@outlook.com"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    #"Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Windows"]
dependencies = [
    "pandas==2.0.0",
    "scottbrian_utils",
    "ibapi @ file://localhost/TWS%20API/source/pythonclient/dist/ibapi-10.24.1-py3-none-any.whl"]

[tool.setuptools]
packages = ["scottbrian_algo1"]
package-dir = {"" = "src"}
#packages = ["scottbrian_algo1", "ibapi"]

#[tool.setuptools.package-dir]
#scottbrian_algo1 = "src/scottbrian_algo1"
#ibapi = "pythonclient/ibapi"
#ibapi = "venv311/Lib/site-packages/ibapi"

[project.urls]
Documentation = "https://scottbrian-algo1.readthedocs.io/en/latest/"
Source = "https://github.com/ScottBrian/scottbrian_algo1.git"

[build-system]
requires = [
    "setuptools >= 68.2.0",
#    "wheel >= 0.41.2"
]
build-backend = "setuptools.build_meta"