[project]
name = "scottbrian_algo1"
version = "1.0.0"
description = "Analyze and trade financial instruments"
readme = "README.rst"
requires-python = "~=3.12"
license = {file = "LICENSE.txt"}
keywords = ["trade", "invest", "ibapi", "stocks", "options"]
authors = [{name = "Scott Tuttle", email = "sbtuttle@outlook.com"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows :: Windows 10"]
dependencies = [
    "pandas ~=2.2",
    "scottbrian_utils ~=4.0",
    "scottbrian_locking ~=2.0.2",
    # "scottbrian_paratools ~=1.0",
    "scottbrian_paratools @  file://C:/Users/Tiger/PycharmProjects/scottbrian_paratools/dist/scottbrian_paratools-1.0.0-py3-none-any.whl",
    "scottbrian_utils @  file://C:/Users/Tiger/PycharmProjects/scottbrian_utils/dist/scottbrian_utils-4.1.0-py3-none-any.whl",
    "ibapi @ file://localhost/TWS%20API/source/pythonclient/dist/ibapi-10.24.1-py3-none-any.whl",

]

[tool.setuptools]
packages = ["scottbrian_algo1"]
package-dir = {"" = "src"}

[project.urls]
Documentation = "https://scottbrian-algo1.readthedocs.io/en/latest/"
Source = "https://github.com/ScottBrian/scottbrian_algo1.git"

[build-system]
requires = [
    "setuptools ~=69.5",
    "wheel ~=0.43"
]
build-backend = "setuptools.build_meta"
